Added scripts to package.json

--- a/package.json
+++ b/package.json
@@ -4,8 +4,11 @@
     "description": "App that lists SpaceX launch missions",
     "main": "server.js",
     "scripts": {
+        "client-install": "npm install --prefix client",
+        "client": "npm start --prefix client",
         "start": "node server.js",
-        "server": "nodemon server.js"
+        "server": "nodemon server.js",
+        "dev": "concurrently \"npm run server\" \"npm run client\""
     },
     "author": "Somsubhra Das",
     "license": "MIT",
