--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "client": "npm start --prefix client",
         "start": "node server.js",
         "server": "nodemon server.js",
-        "dev": "concurrently \"npm run server\" \"npm run client\""
+        "dev": "concurrently \"npm run server\" \"npm run client\"",
+        "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm run client-install && npm run build --prefix client"
     },
     "author": "Somsubhra Das",
     "license": "MIT",
